--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,21 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.nosideracing.msremote"
-      android:versionCode="1" android:versionName="0.1">
+      android:versionCode="27" android:versionName="0.3.0.1">
     <application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="true">
-        <activity android:name=".msremote"
+        <activity android:name=".MS_remote"
                   android:label="@string/app_name" android:alwaysRetainTaskState = "true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-		<activity android:name=".msmusic" android:alwaysRetainTaskState = "true"/>
-		<activity android:name=".mstorrent" android:alwaysRetainTaskState = "true"/>
-		<activity android:name=".msprefs" android:alwaysRetainTaskState = "true"/>
-		<service android:name=".msservice">
+		<activity android:name=".MS_music_remote" android:alwaysRetainTaskState = "true"/>
+		<activity android:name=".MS_show_list" android:alwaysRetainTaskState = "true"/>
+		<activity android:name=".MS_preferences" android:alwaysRetainTaskState = "true"/>
+		<activity android:name=".MS_watch_movie" android:alwaysRetainTaskState = "true"/>
+		<service android:name=".MS_soap_service">
 			<intent-filter>
-				<action android:name="com.nosideracing.msremote.msservice" />
+				<action android:name="com.nosideracing.msremote.MS_soap_service" />
 			</intent-filter>
 		</service>
     </application>
