--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.nosideracing.msremote"
-      android:versionCode="0325" android:versionName="0.3.2.5">
+      android:versionCode="0401" android:versionName="0.4.0.1">
     <application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="true">
         <activity android:name=".MS_remote"
                   android:label="@string/app_name" android:alwaysRetainTaskState = "true">
@@ -29,5 +29,6 @@
 <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"></uses-permission>
 <uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>
 <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
+<uses-permission android:name="android.permission.VIBRATE"></uses-permission>
 
 </manifest> 
