--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.nosideracing.msremote"
-      android:versionCode="0402" android:versionName="0.4.0.2">
+      android:versionName="0.4.1.0" android:versionCode="0410">
     <application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="true">
         <activity android:name=".MS_remote"
                   android:label="@string/app_name" android:alwaysRetainTaskState = "true">
