--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,34 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.nosideracing.msremote"
-      android:versionName="0.4.1.0" android:versionCode="0410">
-    <application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="true">
-        <activity android:name=".MS_remote"
-                  android:label="@string/app_name" android:alwaysRetainTaskState = "true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-		<activity android:name=".MS_music_remote" android:alwaysRetainTaskState = "true"/>
-		<activity android:name=".MS_show_list" android:alwaysRetainTaskState = "true"/>
-		<activity android:name=".MS_preferences" android:alwaysRetainTaskState = "true"/>
-		<activity android:name=".MS_watch_movie" android:alwaysRetainTaskState = "true" android:screenOrientation="portrait"/>
-
-		<service android:name=".MS_soap_service">
+	package="com.nosideracing.rchipremote" android:versionName="1.0.0.0"
+	android:versionCode="1000">
+	<application android:icon="@drawable/icon" android:label="@string/app_name"
+		android:debuggable="true">
+		<activity android:name="RemoteMain" android:label="@string/app_name"
+			android:alwaysRetainTaskState="true">
 			<intent-filter>
-				<action android:name="com.nosideracing.msremote.MS_soap_service" />
+				<action android:name="android.intent.action.MAIN" />
+				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
-		</service>
-    </application>
-    <uses-sdk android:minSdkVersion="7" />
-    <uses-permission android:name="android.permission.INTERNET" />
+		</activity>
+		<activity android:name="MusicRemote"
+			android:alwaysRetainTaskState="true" />
+		<activity android:name="VideoList"
+			android:alwaysRetainTaskState="true" />
+		<activity android:name="Preferences"
+			android:alwaysRetainTaskState="true" />
+		<activity android:name="VideoRemote" android:alwaysRetainTaskState="true" android:screenOrientation="portrait" />
+		<receiver  android:process=":remote" android:name="CheckMessages"></receiver>
+	</application>
+	<uses-sdk android:minSdkVersion="7" />
+	<uses-permission android:name="android.permission.INTERNET" />
 
-<uses-permission android:name="android.permission.READ_PHONE_STATE"></uses-permission>
-<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
-<uses-permission android:name="android.permission.ACCESS_WIFI_STATE"></uses-permission>
-<uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>
-<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
-<uses-permission android:name="android.permission.VIBRATE"></uses-permission>
+	<uses-permission android:name="android.permission.READ_PHONE_STATE"></uses-permission>
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
+	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE"></uses-permission>
+	<uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
+	<uses-permission android:name="android.permission.VIBRATE"></uses-permission>
 
 </manifest> 
