--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.nosideracing.rchipremote"
-    android:versionCode="1023"
-    android:versionName="1.0.2.3" >
+    android:versionCode="1024"
+    android:versionName="1.0.2.4" >
 
     <uses-sdk android:minSdkVersion="10" />
 
@@ -21,6 +21,7 @@
     </uses-permission>
 
     <application
+        android:name="com.nosideracing.rchipremote.Singleton"
         android:debuggable="true"
         android:icon="@drawable/application_icon"
         android:label="@string/app_name" >
